--- a/src/assets/styles/formRegister.css
+++ b/src/assets/styles/formRegister.css
@@ -1,3 +1,17 @@
+.cover_container{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url(../img/cover.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: rgb(241, 248, 255);
+}
+
 .contenedor_form{
     position: relative;
     min-height: 70%;
