--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -4,25 +4,18 @@
 }
 
 body{
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-/* Ubicación de la imagen */
-    background-image: url(../img/cover.png);
-/* Para dejar la imagen de fondo centrada, vertical y horizontalmente */
-    background-position: center center;
-/* Para que la imagen de fondo no se repita */
-    background-repeat: no-repeat;
-/* La imagen se fija en la ventana de visualización para que la altura de la imagen no supere a la del contenido */
-    background-attachment: fixed;
-/* La imagen de fondo se reescala automáticamente con el cambio del ancho de ventana del navegador */
-    background-size: cover;
-/* Se muestra un color de fondo mientras se está cargando la imagen de fondo o si hay problemas para cargarla */
-    background-color: rgb(241, 248, 255);
-
 }
 
 #root{
     width: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     /* height: 100vh; */
 }
